# GrantStream

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  Cargo.toml  README.md  SECURITY.md  SERVICES.md  grantstream.html  hardhat.config.js  package-lock.json  package.json
.github/ISSUE_TEMPLATE/: frontend-issue.md
.github/workflows/: ci.yml
contracts/: GrantStreamEscrow.sol  MockUSDC.sol
grantstream-cli/: .env.example  Cargo.toml  README.md
grantstream-cli/src/: cli.rs  config.rs  contract.rs  main.rs
grantstream-cli/src/commands/: approve_milestone.rs  create_grant.rs  fund_grant.rs  grant_status.rs  list_grants.rs  mod.rs  reject_milestone.rs  submit_milestone.rs
indexer/: .env.example  Cargo.toml
indexer/migrations/: 20250612_001_create_milestone_verifications.sql
indexer/src/: db.rs  main.rs
scripts/: deploy.js
shared/: Cargo.toml
shared/src/: lib.rs
src/app/: root.tsx
test/: GrantStreamEscrow.test.js
verifier/: .env.example  Cargo.toml
verifier/src/: db.rs  main.rs  verifier.rs
