[package]
name = "grantstream-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for interacting with the GrantStream escrow smart contracts"

[[bin]]
name = "grantstream"
path = "src/main.rs"

[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Ethereum interaction
ethers = { version = "2.0", features = ["abigen"] }

# .env file loading
dotenvy = "0.15"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Pretty printing / formatting
colored = "2.1"
