[package]
name = "grantstream-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
grantstream-shared = { path = "../shared" }
tokio = { version = "1.42", features = ["full"] }
ethers = { version = "2.0", features = ["abigen"] }
dotenvy = "0.15"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "macros"] }
thiserror = "1.0"
anyhow = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = "0.4"

[[bin]]
name = "indexer"
path = "src/main.rs"