[package]
name = "grantstream-verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
grantstream-shared = { path = "../shared" }
tokio = { version = "1.42", features = ["full", "macros"] }
axum = "0.8"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1.0"

[[bin]]
name = "verifier"
path = "src/main.rs"
